# yolo-poser

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/yolo_poser/: __init__.py  api.py  autocrop.py  pose_detect.py  split.py  sync_audio.py  utils.py
